--- a/index.html
+++ b/index.html
@@ -78,29 +78,29 @@
       }
 
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "vite": "https://aistudiocdn.com/vite@^7.1.3",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
     "url": "https://aistudiocdn.com/url@^0.11.4",
-    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.1",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "http": "https://aistudiocdn.com/http@^0.0.1-security",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.1",
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "@vscode/sqlite3": "https://aistudiocdn.com/@vscode/sqlite3@^5.1.8-vscode",
-    "sqlite": "https://aistudiocdn.com/sqlite@^5.1.1",
-    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
-    "csv-parse/": "https://aistudiocdn.com/csv-parse@^6.1.0/",
-    "ws": "https://aistudiocdn.com/ws@^8.18.3",
-    "node-fetch": "https://aistudiocdn.com/node-fetch@^3.3.2",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "recharts": "https://aistudiocdn.com/recharts@^3.1.2"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
+    "node-fetch": "https://aistudiocdn.com/node-fetch@^3.3.2",
+    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
+    "recharts": "https://aistudiocdn.com/recharts@^3.1.2",
+    "ws": "https://aistudiocdn.com/ws@^8.18.3",
+    "csv-parse/": "https://aistudiocdn.com/csv-parse@^6.1.0/",
+    "sqlite": "https://aistudiocdn.com/sqlite@^5.1.1",
+    "vite": "https://aistudiocdn.com/vite@^7.1.4",
+    "@vscode/sqlite3": "https://aistudiocdn.com/@vscode/sqlite3@^5.1.8-vscode"
   }
 }
 </script>
